# analog-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTEXT.md  Makefile  README.md  docker-compose.yml  project_tree  pyproject.toml
.opencode/: OPENCODE.md
configs/: default.yaml
data/: ota2_training_data.json
docs/: configured_truth_user_action_boundary.md  related_work_map.md  repo-map.md  stop_conditions.md
scripts/: archive_local_outputs.py  audit_baseline_parity.py  audit_planner_rollout_claim.py  bootstrap_dev_env.ps1  build_baseline_narrative_package.py  build_benchmark_fidelity_framing.py  build_benchmark_robustness_narrative.py  build_dataset.py  build_family_summary_tables.py  build_final_internal_submission_package.py  build_multitask_rollup_tables.py  build_physical_validity_boundary_package.py  build_planner_paper_layout.py  build_submission_appendix_allocation.py  build_submission_experiments_alignment.py  build_submission_limitations_finalization.py  build_submission_main_figures.py  build_submission_main_tables.py  build_submission_manuscript_structure_freeze.py  build_submission_protocol_finalization.py  check_configured_truth_readiness.py  check_container_runtime.py  check_native_artifact_rerunability.py  check_open_pdk_ready.py  collect_training_data.py  confirm_common_benchmark_protocol.py  explain_user_action_boundary.py  export_paper_tables.py  generate_memory_chapter_evidence.py  generate_memory_evidence.py  generate_memory_submission_package.py  generate_memory_transfer_evidence.py  generate_vertical_slice_planner_evidence.py  (+30 more)
(+528 files in other folders)
